--- a/practice.html
+++ b/practice.html
@@ -10,11 +10,15 @@
   <!-- Chart.js -->
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
   <style>
+
+
     body {
-      font-family: "Segoe UI", sans-serif;
+      font-family: 'Helvetica Neue', sans-serif;
       margin: 0;
-      padding: 20px;
-      background: #f0f2f5;
+      padding: 0;
+      background: linear-gradient(to right, #a1c4fd, #c2e9fb);
+      color: #2c3e50;
+      overflow-x: hidden;
     }
     h1 {
       text-align: center;
