--- a/practice.html
+++ b/practice.html
@@ -535,6 +535,12 @@
       refreshData();
       setInterval(refreshData, 60000);
     };
+
+    const menuButton = document.querySelector(".menu-button");
+const drawer = document.querySelector(".drawer");
+menuButton.addEventListener("click", () => {
+  drawer.classList.toggle("open");
+});
   </script>
 </body>
 
