--- a/practice.html
+++ b/practice.html
@@ -193,10 +193,11 @@
       </div>
     </div>
     <div class="drawer">
-      <a href="index.html">ホーム</a>
-      <a href="map.html">店内マップ</a>
+      <a href="/app/system/dashboard.html">ホーム</a>
+      <a href="table.html">テーブル管理</a>
       <a href="histogram.html">混雑状況可視化</a>
-      <a href="admin.html">待ち管理</a>
+      <a href="admin.html">順番待ち管理</a>
+      <a href="generate.html">QRコード生成</a>
     </div>
   </header>
   <h1>入店者ダッシュボード</h1>
