--- a/app/system/dashboard.html
+++ b/app/system/dashboard.html
@@ -497,7 +497,7 @@
       const ctxTodayPie=document.getElementById("todayPieChart").getContext("2d");
       todayPieChart=new Chart(ctxTodayPie,{
         type:"pie",
-        data:{labels:["使用中","空席"], datasets:[{data:[0,14], backgroundColor:["blue","red"]}]}
+        data:{labels:["使用中","空席"], datasets:[{data:[0,14], backgroundColor:["red","blue"]}]}
       });
 
       const ctxWeekday=document.getElementById("weekdayBarChart").getContext("2d");
