--- a/practice.html
+++ b/practice.html
@@ -212,7 +212,8 @@
       <h2>本日の入退店数</h2>
       <div class="small-row">
         <p class="stat">現在店内人数: <span id="count">0</span></p>
-        <br>
+      </div>
+      <div class="small-row">
         <p class="stat">入店数: <span id="entries">0</span></p>
         <p class="stat">退店数: <span id="exits">0</span></p>
         <p class="stat">待機数: <span id="waitingCount">0</span></p>
