--- a/practice.html
+++ b/practice.html
@@ -277,7 +277,7 @@ function calculateAverages() {
           peopleAheadElement.textContent = `${peopleAhead}人`;
         }
 
-        document.getElementById("estimatedTime").innerHTML = 約${estimated}分<br> 
+        document.getElementById("estimatedTime").innerHTML = 約${estimated}分<br>;
 
 
       });
