--- a/app/system/dashboard.html
+++ b/app/system/dashboard.html
@@ -182,6 +182,14 @@
       padding-bottom: 5px;
     }
 
+        .map-qr-container {
+      display: flex;
+      justify-content: center;
+      align-items: flex-start;
+      gap: 40px;
+      flex-wrap: wrap;
+    }
+
   </style>
 </head>
 <body>
