--- a/app/system/dashboard.html
+++ b/app/system/dashboard.html
@@ -287,6 +287,11 @@
 
       </div>
 
+      <div class="map-qr-container">
+      <!-- 店内マップ -->
+      <iframe src="/app/system/map.html" class="map-iframe"></iframe>
+      </div>
+
     
 
   <script>
